developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Individual_Address__c/OJSERLIB__VEDA_Individual_Address__c.object-meta.xml
<CustomObject>
    <label>VEDA Individual Address</label>
    <nameField>
        <displayFormat>IA-{0000}</displayFormat>
        <label>VEDA Individual Address Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VEDA Individual Addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>