developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Individual_Address__c/fields/OJSERLIB__CountryCode__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__CountryCode__c</fullName>
    <label>CountryCode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AUS</fullName>
            </value>
            <value>
                <fullName>NZL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>