developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Individual_Address__c/fields/OJSERLIB__Postcode__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Postcode__c</fullName>
    <label>Postcode</label>
    <length>4</length>
    <type>Text</type>
</CustomField>