developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Individual_Address__c/fields/OJSERLIB__State__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NSW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>