developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Individual_Address__c/fields/OJSERLIB__Stree_Type__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Stree_Type__c</fullName>
    <label>Stree Type</label>
    <length>4</length>
    <type>Text</type>
</CustomField>