developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Individual_Address__c/fields/OJSERLIB__Street_Name__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Street_Name__c</fullName>
    <label>Street Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>