developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Individual_Address__c/fields/OJSERLIB__Street_Number__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Street_Number__c</fullName>
    <label>Street Number</label>
    <length>8</length>
    <type>Text</type>
</CustomField>