developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Individual_Address__c/fields/OJSERLIB__Suburb__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Suburb__c</fullName>
    <label>Suburb</label>
    <length>50</length>
    <type>Text</type>
</CustomField>