developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Individual_Address__c/fields/OJSERLIB__Unit_Number__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Unit_Number__c</fullName>
    <label>Unit Number</label>
    <length>5</length>
    <type>Text</type>
</CustomField>